# A-new-coefficient-of-correlation

./: .gitignore  .pre-commit-config.yaml  New Correlation Coefficient.ipynb  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
ichor/: ichor.py  requirements.txt
notebooks/: New Correlation Coefficient.ipynb
src/xicor/: __init__.py  core.py  spark.py
tests/: test_core.py  test_spark.py
xi_correlation/: coef.py
